# rust-chess

./: Cargo.toml  README.md  bench.sh  criterion.toml
bench_results/batch_all_attack_mask/bench-2122b6a/: estimates.json  sample.json  tukey.json
bench_results/batch_all_attack_mask/bench-a5e84ac/: estimates.json  sample.json  tukey.json
bench_results/batch_all_attack_mask/change/: estimates.json
bench_results/batch_all_attack_mask/new/: benchmark.json  estimates.json
bench_results/batch_all_attack_mask/report/: index.html
bench_results/batch_bishop_attack_mask/bench-2122b6a/: benchmark.json  estimates.json  tukey.json
bench_results/batch_bishop_attack_mask/bench-a5e84ac/: estimates.json  sample.json  tukey.json
bench_results/batch_bishop_attack_mask/change/: estimates.json
bench_results/batch_bishop_attack_mask/new/: sample.json
bench_results/batch_bishop_attack_mask/report/: index.html
bench_results/batch_knight_attack_mask/bench-2122b6a/: sample.json
bench_results/batch_knight_attack_mask/bench-a5e84ac/: benchmark.json  (+3 more)
bench_results/report/: index.html
benches/: attack_bitmask.rs  attack_bitmask_bench.rs  bench.rs
src/: exp.rs  lib.rs  main.rs  util.rs
src/cache/: mod.rs
src/chess/: attack_bitmask.rs  bit.rs  check.rs  chess.rs  chess_base.rs  consts.rs  mod.rs  types.rs  util.rs
src/exp/: attack_bitmask.rs  chess_exp.rs  mod.rs
src/util/: bit.rs  chess.rs  chess2.rs  chess3.rs  chess_base.rs  consts.rs  types.rs
tests/: attack_bitmask.rs  check.rs  chess_base.rs  main.rs  types.rs
tests/test_data/: 10000-checked-kings-unique.fen
(+26 files in other folders)
