[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false




[dependencies]
ary = "0.1.0"
bitvec = "1.0.1"
num_enum = "0.7.0"
rand = { version = "0.8.5", features = ["small_rng"]}
serde = "1.0.188"

[profile.dev]
opt-level=1
overflow-checks=false

[profile.release]
opt-level=3
overflow-checks=false

[profile.bench]
opt-level=3
overflow-checks=false

[profile.test]
opt-level=2
overflow-checks=false

